--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "openshift-angular-example": {
+    "angular-example": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/openshift-angular-example",
+            "outputPath": "dist/angular-example",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -58,18 +58,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "openshift-angular-example:build"
+            "browserTarget": "angular-example:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "openshift-angular-example:build:production"
+              "browserTarget": "angular-example:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "openshift-angular-example:build"
+            "browserTarget": "angular-example:build"
           }
         },
         "test": {
@@ -103,7 +103,7 @@
         }
       }
     },
-    "openshift-angular-example-e2e": {
+    "angular-example-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -112,11 +112,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "openshift-angular-example:serve"
+            "devServerTarget": "angular-example:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "openshift-angular-example:serve:production"
+              "devServerTarget": "angular-example:serve:production"
             }
           }
         },
@@ -132,5 +132,5 @@
       }
     }
   },
-  "defaultProject": "openshift-angular-example"
+  "defaultProject": "angular-example"
 }
