--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,4 +18,6 @@ steps:
 - script: |
     npm install
     npm run build
+    run --ng lint
+    run --ng test
   displayName: 'npm install and build'
