--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,10 +20,13 @@ steps:
     npm run build    
   displayName: 'npm install and build'
 
-- task: Npm@1
-  displayName: 'Test Angular'
+- task: Bash@3
   inputs:
-    command: custom
-    customCommand: run --ng test --watch=false --code-coverage
-    workingDir: src
+    targetType: 'inline'
+    script: 'run --ng test'
 
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: 'jar -cvf angularUI.war *'
+    workingDirectory: 'dist/'
