--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,3 +25,9 @@ steps:
     targetType: 'inline'
     script: 'jar -cvf angularUI.war *'
     workingDirectory: 'dist/'
+
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: '$(Pipeline.Workspace)'
+    artifact: 'angular-example'
+    publishLocation: 'pipeline'
