--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,20 @@ steps:
     npm run build    
   displayName: 'npm install and build'
 
+# cURL upload files
+# Use cURL's supported protocols to upload files
+- task: cURLUploader@2
+  inputs:
+    files: 
+    #authType: 'ServiceEndpoint' # Optional. Options: serviceEndpoint, userAndPass
+    #serviceEndpoint: # Required when authType == ServiceEndpoint
+    #username: # Optional
+    #password: # Optional
+    #url: # Required when authType == UserAndPass
+    #remotePath: 'upload/$(Build.BuildId)/' # Optional
+    #options: # Optional
+    #redirectStderr: true # Optional
+
 - task: Bash@3
   inputs:
     targetType: 'inline'
