Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,4 +30,5 @@ steps:
   inputs:
     targetPath: '$(Pipeline.Workspace)'
     artifact: 'angular-example'
-    publishLocation: 'pipeline'
+    publishLocation: 'filepath'
+    fileSharePath: '/dist'
