Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,9 +26,11 @@ steps:
     script: 'jar -cvf angularUI.war *'
     workingDirectory: 'dist/'
 
-- task: PublishPipelineArtifact@1
+- task: PublishBuildArtifacts@1
   inputs:
-    targetPath: '$(Pipeline.Workspace)'
-    artifact: 'angular-example'
-    publishLocation: 'pipeline'
+    PathtoPublish: 'dist/angularUI.war'
+    ArtifactName: 'angular-example'
+    publishLocation: 'Container'
+  displayName: 'Publish Artifacts'
+
 
