--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ steps:
 
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: 'dist/ng-azure-devops'
+    PathtoPublish: '/dist'
     ArtifactName: 'angular-example'
     publishLocation: 'Container'
   displayName: 'Publish Artifacts'
