Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,10 +25,9 @@ steps:
     targetType: 'inline'
     script: 'jar -cvf angularUI.war *'
     workingDirectory: 'dist/'
-- task: PublishPipelineArtifact@1
+
+- task: PublishBuildArtifacts@1
   inputs:
-    targetPath: '$(Pipeline.Workspace)'
-    artifact: 'angular-example'
-    publishLocation: 'pipeline'
-
-
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'angular-example'
+    publishLocation: 'Container'
