Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,10 @@ steps:
     npm run build    
   displayName: 'npm install and build'
 
+- script: |    
+    npm run test    
+  displayName: 'npm Test'
+
 - task: Bash@3
   inputs:
     targetType: 'inline'
