--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,10 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
+    npm test      
+  displayName: 'Unit Test Karma' 
+
+- script: |
     npm install
     npm run build    
   displayName: 'npm install and build'
