Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,8 @@ steps:
       # sonar.exclusions=**/*.bin
       sonar.language=js
       sonar.sourceEncoding=UTF-8
+      sonar.login=admin
+      sonar.password=admin
 
 - task: SonarQubeAnalyze@4
 
