Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,16 +15,23 @@ steps:
     versionSpec: '10.x'
   displayName: 'Install Node.js'
 
-- script: |
-    npm install    
-    npm run build    
-  displayName: 'npm install and build'
-
 - task: SonarQubePrepare@4
   inputs:
     SonarQube: 'SonarQube Openshift'
     scannerMode: 'CLI'
-    configMode: 'file'
+    configMode: 'manual'
+    cliProjectKey: 'Angular-Example'
+    cliProjectName: 'Angular-Example'
+    cliSources: '.'
+    extraProperties: |
+      # Additional properties that will be passed to the scanner, 
+      # Put one key=value per line, example:
+      # sonar.exclusions=**/*.bin
+      sonar.language=js
+      sonar.sourceEncoding=UTF-8
+      sonar.login=admin
+      sonar.password=admin
+      sonar.branch=Develop
 
 - task: SonarQubeAnalyze@4
 
@@ -34,6 +41,12 @@ steps:
     command: custom
     customCommand: run lint --  --format=stylish
     workingDir: src
+
+- script: |
+    npm install    
+    npm run build    
+  displayName: 'npm install and build'
+
 - task: Bash@3
   inputs:
     targetType: 'inline'
