Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,11 +27,10 @@ steps:
       # Additional properties that will be passed to the scanner, 
       # Put one key=value per line, example:
       # sonar.exclusions=**/*.bin
-      sonar.language=js
-      sonar.sourceEncoding=UTF-8
-      sonar.login=admin
-      sonar.password=admin   
-      sonar.branch.name=Develop   
+      # sonar.language=js
+      # sonar.sourceEncoding=UTF-8
+      # sonar.login=admin
+      # sonar.password=admin
 - task: SonarQubeAnalyze@4
 - task: Npm@1
   displayName: 'Lint Angular'
