--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
     configMode: 'manual'
     cliProjectKey: 'Angular-Example'
     cliProjectName: 'Angular-Example'
-    cliSources: '.'
+    cliSources: 'src'
     extraProperties: |
       # Additional properties that will be passed to the scanner, 
       # Put one key=value per line, example:
