--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 sonar.proyectkey=angular-example
 sonar.proyectName= angular-example
-sonar.projectVersión=1.0
-sonar.branch=master
+sonar.login=admin
+sonar.password=admin
+sonar.projectVersion=1.0
 sonar.languaje=js
 sonar.sourceEconding=UTF-8
 sonar.source=src
-sonar.login=admin
-sonar.password=admin
+
