Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,8 +32,16 @@ steps:
 
 - script: |
     npm install    
-    npm run build    
+    npm run build  
   displayName: 'npm install and build'
+
+
+- task: Npm@1
+  displayName: 'Test Angular'
+  inputs:
+    command: custom
+    customCommand: run ng test --watch=false --browsers=ChromeHeadless
+    workingDir: src
 
 - task: Npm@1
   displayName: 'Lint Angular'
