Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,7 @@ steps:
 
 - script: |
     npm run test-headless
-  displayName: 'unit Test'
+  displayName: 'Unit Test'
 
 - task: Npm@1
   displayName: 'Lint Angular'
