Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,6 +45,10 @@ steps:
     command: custom
     customCommand: run lint --  --format=stylish
     workingDir: src
+
+- script: |
+    npm run e2e
+  displayName: 'E2E Test'
 - task: Bash@3
   inputs:
     targetType: 'inline'
