--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,19 +46,10 @@ steps:
     customCommand: run lint --  --format=stylish
     workingDir: src
 
-# Publish Test Results
-# Publish test results to Azure Pipelines
 - task: PublishTestResults@2
   inputs:
-    #testResultsFormat: 'JUnit' # Options: JUnit, NUnit, VSTest, xUnit, cTest
-    #testResultsFiles: '**/TEST-*.xml' 
-    #searchFolder: '$(System.DefaultWorkingDirectory)' # Optional
-    #mergeTestResults: false # Optional
-    #failTaskOnFailedTests: false # Optional
-    #testRunTitle: # Optional
-    #buildPlatform: # Optional
-    #buildConfiguration: # Optional
-    #publishRunAttachments: true # Optional
+    testResultsFormat: 'JUnit'
+    testResultsFiles: '**/TEST.xml'
 
 - task: Bash@3
   inputs:
