Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,7 +44,7 @@ steps:
     testResultsFormat: 'JUnit'
     testResultsFiles: '**/TEST.xml'    
     testRunTitle: "Unit tests with Jest"    
-    searchFolder: "$(Build.SourcesDirectory)"    
+    searchFolder: "$(System.DefaultWorkingDirectory)"    
     failTaskOnFailedTests: false
 
 - task: Npm@1
