--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,7 @@ steps:
 - task: PublishTestResults@2
   inputs:
     testResultsFormat: 'JUnit'
-    testResultsFiles: '**/TEST.xml'    
+    testResultsFiles: '**/TEST-*.xml'    
     testRunTitle: "Unit tests with Jest"    
     searchFolder: "$(System.DefaultWorkingDirectory)"    
     failTaskOnFailedTests: false
