--- a/package.json
+++ b/package.json
@@ -45,5 +45,17 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
-  }
+  },  
+  "jest": {  
+    "reporters": [  
+      [  
+        "jest-junit", {  
+          "suiteName": "SPFx Unit Test",  
+          "outputDirectory": "./reports/",  
+          "outputName": "./junit.xml"  
+        }  
+      ]  
+    ]  
+  }  
+
 }
