--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,8 +48,7 @@ steps:
 - task: PublishTestResults@2
   inputs:
     testResultsFormat: 'JUnit'
-    testResultsFiles: '**/TEST.xml'
-    testRunTitle: 'Unit tests'
+    testResultsFiles: '**\unit.xml'
 
 - script:
     npm run e2e
