--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,7 @@ steps:
     workingDir: src
 
 - script: |
-    npm run --no-watch --no-progress --browsers=ChromeHeadlessCI
+    npm run test-headless
   displayName: 'Unit Test'
 
 - task: PublishTestResults@2
