--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ steps:
 - task: PublishTestResults@2
   inputs:
     testResultsFormat: 'XUnit'
-    testResultsFiles: '**\TEST.xml'
+    testResultsFiles: 'TEST.xml'
 
 - script:
     npm run e2e
