--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,7 @@ steps:
     workingDir: src
 
 - script: |
-    npm run test-headless
+    npm run test
   displayName: 'Unit Test'
 
 - task: PublishTestResults@2
