--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,8 +53,8 @@ steps:
   condition: succeededOrFailed()
   inputs:
     codeCoverageTool: Cobertura
-    summaryFileLocation: 'src/coverage/cobertura-coverage.xml'
-    reportDirectory: src/coverage
+    summaryFileLocation: '/coverage/cobertura-coverage.xml'
+    reportDirectory: coverage
     failIfCoverageEmpty: true
 
 - script: |
