--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,7 +46,7 @@ steps:
   inputs:
     command: custom
     customCommand: run test -- --watch=false --code-coverage
-    workingDir: src/
+    workingDir: /
 
 - task: PublishCodeCoverageResults@1
   displayName: 'Publish code coverage Angular results'
