--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,7 +54,7 @@ steps:
   inputs:
     codeCoverageTool: Cobertura
     summaryFileLocation: 'src/coverage/cobertura-coverage.xml'
-    reportDirectory: coverage
+    reportDirectory: src/coverage
     failIfCoverageEmpty: true
 
 - script: |
