--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,15 +46,14 @@ steps:
   inputs:
     command: custom
     customCommand: run test -- --watch=false --code-coverage
-    workingDir: src/
+    workingDir: ../src
 
 - task: PublishCodeCoverageResults@1
   displayName: 'Publish code coverage Angular results'
   condition: succeededOrFailed()
   inputs:
     codeCoverageTool: 'Cobertura'
-    summaryFileLocation: 'src/coverage/cobertura-coverage.xml'
-    pathToSources: 'src/coverage'
+    summaryFileLocation: 'src/coverage/cobertura-coverage.xml'    
     reportDirectory: 'src/coverage'
     failIfCoverageEmpty: true
 
