--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,17 +44,18 @@ steps:
 - task: Npm@1
   displayName: 'Test Angular Cobertura'
   inputs:
-    command: custom
-    customCommand: run test -- --watch=false --code-coverage
-    workingDir: ../src
+    command: 'custom'
+    workingDir: '$(System.DefaultWorkingDirectory)/src'
+    customCommand: 'run test -- --watch=false --code-coverage'
 
 - task: PublishCodeCoverageResults@1
   displayName: 'Publish code coverage Angular results'
   condition: succeededOrFailed()
   inputs:
     codeCoverageTool: 'Cobertura'
-    summaryFileLocation: 'src/coverage/cobertura-coverage.xml'    
-    reportDirectory: 'src/coverage'
+    summaryFileLocation: 'src/coverage/cobertura-coverage.xml'
+    pathToSources: '$(System.DefaultWorkingDirectory)/src'
+    reportDirectory: '$(System.DefaultWorkingDirectory)/src/coverage'
     failIfCoverageEmpty: true
 
 - script: |
