--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,9 +37,9 @@ steps:
 - task: Npm@1
   displayName: 'Lint Angular (typeScript)'
   inputs:
-    command: custom
-    customCommand: run lint --  --format=stylish
-    workingDir: src
+    command: 'custom'
+    workingDir: '$(System.DefaultWorkingDirectory)/src'
+    customCommand: 'run lint --  --format=stylish'
 
 - task: Npm@1
   displayName: 'Test Angular Cobertura'
