Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,6 +72,14 @@ steps:
     testResultsFormat: JUnit
     testResultsFiles: "**/TESTS*.xml"
 
+- task: JenkinsQueueJob@2
+  inputs:
+    serverEndpoint: 'Jenkins Poc Masisa'
+    jobName: 'new_pipeline_qtest_demo'
+    captureConsole: false
+    capturePipeline: false
+    isParameterizedJob: false
+
 - task: Npm@1
   displayName: 'E2E Test Angular'
   inputs:
