Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,7 +78,7 @@ steps:
     jobName: 'new_pipeline_qtest_demo'
     captureConsole: true
     capturePipeline: true
-    isParameterizedJob: false
+    isParameterizedJob: true
 
 - task: Npm@1
   displayName: 'E2E Test Angular'
