--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,8 @@ steps:
     versionSpec: '10.x'
   displayName: 'Install Node.js'
 
+
+
 #- task: SonarQubePrepare@4
 #  inputs:
 #    SonarQube: 'Sonar Qube Openshift'
@@ -91,6 +93,14 @@ steps:
 - script: |
     npm run build  
   displayName: 'Construir Aplicación (Build)'
+
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(Build.BinariesDirectory)'
+    includeRootFolder: false
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    replaceExistingArchive: true
 
 - task: Bash@3
   inputs:
