--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,46 +49,46 @@ steps:
 #    workingDir: '$(System.DefaultWorkingDirectory)/src'
 #    customCommand: 'run lint --  --format=stylish'
 
-- task: Npm@1
-  displayName: 'Test Angular Cobertura'
-  inputs:
-    command: 'custom'
-    workingDir: 'src'
-    customCommand: 'run test -- --watch=false --code-coverage'
+#- task: Npm@1
+#  displayName: 'Test Angular Cobertura'
+#  inputs:
+#    command: 'custom'
+#    workingDir: 'src'
+#    customCommand: 'run test -- --watch=false --code-coverage'
 
-- task: PublishCodeCoverageResults@1
-  displayName: 'Publish code coverage Angular results'
-  condition: succeededOrFailed()
-  inputs:
-    codeCoverageTool: 'Cobertura'
-    summaryFileLocation: 'src/coverage/cobertura-coverage.xml'
-    reportDirectory: 'src/coverage'
-    failIfCoverageEmpty: true
+#- task: PublishCodeCoverageResults@1
+#  displayName: 'Publish code coverage Angular results'
+#  condition: succeededOrFailed()
+#  inputs:
+#    codeCoverageTool: 'Cobertura'
+#    summaryFileLocation: 'src/coverage/cobertura-coverage.xml'
+#    reportDirectory: 'src/coverage'
+#    failIfCoverageEmpty: true
 
-- task: PublishTestResults@2
-  displayName: 'Publish Angular test results'
-  condition: succeededOrFailed()
-  inputs:
-    searchFolder: $(System.DefaultWorkingDirectory)/junit
-    testRunTitle: Angular
-    testResultsFormat: JUnit
-    testResultsFiles: "**/TESTS*.xml"
+#- task: PublishTestResults@2
+#  displayName: 'Publish Angular test results'
+#  condition: succeededOrFailed()
+#  inputs:
+#    searchFolder: $(System.DefaultWorkingDirectory)/junit
+#    testRunTitle: Angular
+#    testResultsFormat: JUnit
+#    testResultsFiles: "**/TESTS*.xml"
     
-- task: Npm@1
-  displayName: 'E2E Test Angular'
-  inputs:
-    command: custom
-    customCommand: run e2e
-    workingDir: src
+#- task: Npm@1
+#  displayName: 'E2E Test Angular'
+#  inputs:
+#    command: custom
+#    customCommand: run e2e
+#    workingDir: src
 
-- task: PublishTestResults@2
-  displayName: 'Publish Angular E2E test results'
-  condition: succeededOrFailed()
-  inputs:
-    searchFolder: $(System.DefaultWorkingDirectory)/e2e/junit
-    testRunTitle: Angular_E2E
-    testResultsFormat: JUnit
-    testResultsFiles: "**/junit*.xml"
+#- task: PublishTestResults@2
+#  displayName: 'Publish Angular E2E test results'
+#  condition: succeededOrFailed()
+#  inputs:
+#    searchFolder: $(System.DefaultWorkingDirectory)/e2e/junit
+#    testRunTitle: Angular_E2E
+#    testResultsFormat: JUnit
+#    testResultsFiles: "**/junit*.xml"
 
 - script: |
     npm run build  
